force-app/main/default/objects/Log_Parsing_Error__c/Log_Parsing_Error__c.object-meta.xml
<CustomObject>
    <label>Log Parsing Error</label>
    <nameField>
        <label>Log Parsing Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Parsing Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>