force-app/main/default/objects/Log_Parsing_Error__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <label>Action Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>