force-app/main/default/objects/Log_Parsing_Error__c/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <label>Apex Class Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>