force-app/main/default/objects/Log_Parsing_Error__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex Exception</fullName>
            </value>
            <value>
                <fullName>DML Exception</fullName>
            </value>
            <value>
                <fullName>Validation Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>