force-app/main/default/objects/Log_Parsing_Error__c/fields/Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Attempt__c</fullName>
    <label>Last Attempt</label>
    <type>DateTime</type>
</CustomField>