force-app/main/default/objects/Log_Parsing_Error__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <label>Opportunity Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>