force-app/main/default/objects/Log_Parsing_Error__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>