force-app/main/default/objects/Log_Parsing_Error__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <label>Status Code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>